--- a/articles.html
+++ b/articles.html
@@ -16,7 +16,7 @@
 <body>
     <!--Header-->
     <header id="fullscreen" style="display: block ;">
-        <div class="logo" id="full"><a class="ajax-link" href="home.html">LIBRACELIA</a></div>
+        <div class="logo" id="full"><a class="ajax-link" href="index.html">LIBRACELIA</a></div>
 
         <!-- <ul class="header-nav">
             <li><a class="ajax-link" href="projects.html">产出</a></li>
