--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--Header-->
     <header id="fullscreen" style="display: block ;">
 
-        <div class="logo" id="full"><a class="ajax-link" href="home.html">LIBRACELIA</a></div>
+        <div class="logo" id="full"><a class="ajax-link" href="index.html">LIBRACELIA</a></div>
 
         <div class="menu-index" id="button">
             <i class="ri-menu-line"></i>
