--- a/aiot1.html
+++ b/aiot1.html
@@ -16,7 +16,7 @@
 <body>
     <!--Header-->
     <header id="fullscreen" style="display: block ;">
-        <div class="logo" id="full"><a class="ajax-link" href="home.html">LIBRACELIA</a></div>
+        <div class="logo" id="full"><a class="ajax-link" href="index.html">LIBRACELIA</a></div>
 
         <ul class="header-nav">
             <li><a class="ajax-link disable" href="projects.html">华兴源创</a></li>
