--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="text-intro" id="site-type">
             <h1>Hi 你好！我是李雪燃</h1>
-            <p>UI/UX Designer | Product Designer | Front-End Develop Learner</p>
+            <p>UI/UX Designer | Product Designer</p>
             <p>我毕业于新加坡义安理工产品设计与创新专业，15 年就职于北京奇鱼时代，负责 ToB 软件「微办公」审批和后台模块的设计；18
                 年加入广东美云智数，致力于成就企业数字化转型，客户方有东风汽车、宝时得、瑞贝卡等；20 年作为产品设计师加入青云科技，负责产品 AIoT 以及行业化的物联网解决方案，客户方有江苏交控与苏州华兴源创。</p>
         </div>
