--- a/aiot1.html
+++ b/aiot1.html
@@ -40,7 +40,7 @@
             <div class="text-intro" id="site-type">
 
                 <h1>边缘本地控制台</h1>
-                <p>[外观专利]用于电脑的物联网平台边缘设备操作系统的图形界面</p>
+                <p>[外观专利]用于电脑的物联网平台边缘设备操作系统的图形界面（李雪燃、胡蝶）</p>
       
               </div>
 
