--- a/articles.html
+++ b/articles.html
@@ -51,7 +51,7 @@
                     <br /><br />
                     与我相关的有技术传播需求的职业：视觉设计师、UX 文案
                     <br /><br />
-                    <div class="knowmore"><i class="ri-download-fill"></i>下载PDF</div>
+                    <a href="file/celiali-2022-08-22.pdf" download="celiali-2022-08-22.pdf"><i class="ri-download-fill"></i>下载PDF</a>
                 </p>
             </div>
 
@@ -64,7 +64,7 @@
             <h1>数据可视化设计在行业中的实践与应用</h1>
 
             <div class="one-column">
-                <p>2022-7-24 ｜ 笔记</p>
+                <p>2022-07-24 ｜ 笔记</p>
             </div>
 
 
@@ -76,7 +76,7 @@
                     <br /><br />
                     行业数据可视化大屏的创新性：【具体经验 ｜ 体验】 ➡️ 【反思性观察 ｜ 思考】 ➡️ 【抽象概念化 ｜ 逻辑】 ➡️ 【积极实践 ｜ 策略】
                     <br /><br />
-                    <div class="knowmore"><i class="ri-download-fill"></i>下载PDF</div>
+                    <a href="file/celiali-2022-7-24.pdf" download="celiali-2022-7-24.pdf"><i class="ri-download-fill"></i>下载PDF</a>
                 </p>
             </div>
 
@@ -89,7 +89,7 @@
             <h1>Naming Tokens in Design Systems</h1>
 
             <div class="one-column">
-                <p>2022-07-6 ｜ 翻译</p>
+                <p>2022-07-06 ｜ 翻译</p>
             </div>
 
 
@@ -102,7 +102,7 @@
                     设计变量这一概念自 Salesforce 于 2014 年提出以来，已经为许多设计系统提供了视觉基础。我（Nathan Curtis）也在 2016
                     年就对它十分有兴趣，写过关于它的文章，在此之后我花了越来越多的精力在它上面。随着视觉风格系统在组件、平台和输出领域的广泛传播，设计变量-以及它们的命名规范-变得越来越重要。
                     <br /><br />
-                    <div class="knowmore"><i class="ri-download-fill"></i>下载PDF</div>
+                    <a href="file/celiali-NamingTokensinDesignSystems.pdf" download="celiali-NamingTokensinDesignSystems.pdf"><i class="ri-download-fill"></i>下载PDF</a>
                 </p>
             </div>
 
@@ -115,7 +115,7 @@
             <h1>Laws of UX</h1>
 
             <div class="one-column">
-                <p>2022-6-18 ｜ 翻译</p>
+                <p>2022-06-18 ｜ 翻译</p>
             </div>
 
 
@@ -125,7 +125,7 @@
                     <br /><br />
                     启发式的（HEURISTIC）| 原则性的（PRINCIPLE）| 格式塔（GESTALT）| 视觉偏向（GOGNOITIVE BIAS）
                     <br /><br />
-                    <div class="knowmore"><i class="ri-download-fill"></i>下载PDF</div>
+                    <a href="file/celiali-LawsofUX.pdf" download="celiali-LawsofUX.pdf"><i class="ri-download-fill"></i>下载PDF</a>
                 </p>
             </div>
 
@@ -138,7 +138,7 @@
             <h1>色彩插件化配置功能</h1>
 
             <div class="one-column">
-                <p>2022-3-31 ｜ 产出</p>
+                <p>2022-03-31 ｜ 产出</p>
             </div>
 
 
@@ -148,7 +148,7 @@
                     <br /><br />
                     现状：物联网2.0目前有深浅2种风格的切换，所以在色彩自适应配置上需要考虑这2种模式，要考虑颜色的可读性；同时每1种主色需要3种辅色搭配，需要在客户提供主色后，由我们自动生成适合深浅2种风格的颜色（考虑生成不只3种）
                     <br /><br />
-                    <div class="knowmore"><i class="ri-download-fill"></i>下载PDF</div>
+                    <a href="file/celiali-2022-3-21.pdf" download="celiali-2022-3-21.pdf"><i class="ri-download-fill"></i>下载PDF</a>
                 </p>
             </div>
 
@@ -176,7 +176,7 @@
                     <br /><br />
                     图表分类：比较、构成、分布、联系与其他
                     <br /><br />
-                    <div class="knowmore"><i class="ri-download-fill"></i>下载PDF</div>
+                    <a href="file/celiali-2021-12-27.pdf" download="celiali-2021-12-27.pdf"><i class="ri-download-fill"></i>下载PDF</a>
                 </p>
             </div>
 
@@ -190,7 +190,7 @@
             <h1>如何通过用户研究为产品寻找依据</h1>
 
             <div class="one-column">
-                <p>2021-11-4 ｜ 笔记</p>
+                <p>2021-11-04 ｜ 笔记</p>
             </div>
 
 
@@ -201,7 +201,7 @@
                     定量研究VS定性研究：先定性还是先定量，并行分工如何开展，研究方法：深度访谈与问卷调查
                     <br /><br />
 
-                    <div class="knowmore"><i class="ri-download-fill"></i>下载PDF</div>
+                    <a href="file/celiali-2021-11-4.pdf" download="celiali-2021-11-4.pdf"><i class="ri-download-fill"></i>下载PDF</a>
                 </p>
             </div>
 
