--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
                 </a>
             </li>
 
-            <li class="grid-item disable">
-                <a class="ajax-link" href="home.html">
-                    <i class="ri-pencil-ruler-2-fill disable"></i>
-                    <div class="text-content disable">
-                        <h1>daily work</h1>
-                        <p>施工中</p>
+            <li class="grid-item">
+                <a class="ajax-link" href="xc.html">
+                    <i class="ri-cloud-fill"></i>
+                    <div class="text-content">
+                        <h1>信创云</h1>
+                        <p>行业知识 ｜ 竞品了解</p>
                     </div>
                 </a>
             </li>
