--- a/meiyun.html
+++ b/meiyun.html
@@ -8,73 +8,60 @@
     <title>libracelia</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/projects.css">
+    <link rel="stylesheet" href="css/meiyun.css">
     <link rel="icon" href="img/ico.ico">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 
 <body>
-    <!--Header-->
-    <header id="fullscreen" style="display: block ;">
-        <div class="logo" id="full"><a class="ajax-link" href="index.html">LIBRACELIA</a></div>
-
-        <ul class="header-nav">
-            <li><a class="ajax-link disable" href="projects.html">华兴源创</a></li>
-            <li><a class="ajax-link disable" href="aiot1.html">边缘本地控制台</a></li>
-            <li><a class="ajax-link" href="meiyun.html">美云智数</a></li>
+    <header>
+        <a href="/portfolio.html" class="logo">libracelia</a>
+        <ul>
+            <li><a href="/education.html">教育背景</a></li>
+            <li><a href="/workexperience.html" class="active">工作经历</a></li>
+            <li><a href="/index.html">设计工具</a></li>
         </ul>
-
-        <div class="menu-index" id="">
-            <i class="ri-menu-line"></i>
+    </header>
+    <section>
+        <div class="subsection">
+            <ul>
+                <li><a href="/workexperience.html"></i>青云科技</a></li>
+                <li><a href="/meiyun.html" class="active"><i class="ri-star-s-fill"></i>美云智数<i
+                            class="ri-star-s-fill"></i></a></li>
+                <li><a href="/qiyu.html"></i>奇鱼时代</a></li>
+            </ul>
         </div>
 
-    </header>
+        <div class="title">
+            <div class="one-column">
+                <img src="/img/portfolio/MideaCloud.png" alt="美云智数">
+            </div>
+            <div class="two-column">
+                <h1>美云智数（佛山）</h1>
+                <p>UE 设计师</p>
+                <p>「美云智数」依托美的，致力于成就企业数字化转型。</br></br>
 
-    <!--Content-->
-
-    <div class="content" id="ajax-content">
+                    产品：负责美云邮箱、SAAS基础平台优化改版等，依据设计能力运用美学解决问题，表述信息。</br>
+                    项目：东风集团管理运营控制项目、瑞贝卡数字化运营平台项目等，依据用户情感定位与心理预期提供设计，安装设计规范与需求原型排列信息元素。
+                    运营&品牌：官网建设，行业观察报告数据小品支持与市场部物料支持，了解设计对建设用户信任的重要性并以此作为出发点进行设计。
+                </p>
+            </div>
+        </div>
 
 
         <div class="text-intro">
-
-            <h1>美云智数</h1>
-
-            <div class="one-column">
-                <p>美云智数依托美的，致力于成就企业数字化转型</p>
-            </div>
-
-
-            <div class="two-column">
-                <p>
-                    产品：负责美云邮箱、SAAS基础平台优化改版等，依据设计能力运用美学解决问题，表述信息
-                    <br /><br />
-                    项目：东风集团管理运营控制项目、瑞贝卡数字化运营平台项目等，依据用户情感定位与心理预期提供设计，按照设计规范与需求原型排列信息元素
-
-                    <br /><br />
-                    运营&品牌：官网建设，行业观察报告数据小品支持与市场部物料支持，了解设计对建设用户信任的重要性并以此作为出发点进行设计
-
-                </p>
-            </div>
-
-            <div class="clear"></div>
-
-            <div class="text-intro" id="site-type">
-
-                <h1>项目</h1>
-                <p>陀螺仪｜水晶球｜观星台｜地动仪｜运营｜品牌</p>
-      
-              </div>
-
-            <br /><br />
-
+            <h1>项目</h1>
+            <p>陀螺仪｜水晶球｜观星台｜地动仪｜运营｜品牌</p>
         </div>
+
 
         <!--Portfolio grid-->
 
         <ul class="portfolio-grid" style="position: relevative; height: 1200px;">
 
 
-            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]" style="display: list-item; opacity: 1; position: absolute; left: 0px; top: 0px;">
+            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]"
+                style="display: list-item; opacity: 1; position: absolute; left: 0px; top: 0px;">
                 <img src="img/meiyun/C3.jpg">
                 <div class="grid-hover">
                     <h1>云朵社区</h1>
@@ -82,7 +69,8 @@
                 </div>
             </li>
 
-            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]" style="display: list-item; opacity: 1; position: absolute; left:390px; top: 0px;">
+            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]"
+                style="display: list-item; opacity: 1; position: absolute; left:390px; top: 0px;">
                 <img src="img/meiyun/C4.jpg">
                 <div class="grid-hover">
                     <h1>美云邮箱 5.0</h1>
@@ -90,7 +78,8 @@
                 </div>
             </li>
 
-            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]" style="display: list-item; opacity: 1; position: absolute; left: 780px; top: 0px;">
+            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]"
+                style="display: list-item; opacity: 1; position: absolute; left: 780px; top: 0px;">
                 <img src="img/meiyun/C5.jpg">
                 <div class="grid-hover">
                     <h1>协作空间</h1>
@@ -98,7 +87,8 @@
                 </div>
             </li>
 
-            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]" style="display: list-item; opacity: 1; position: absolute; left: 0px; top: 244px;">
+            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]"
+                style="display: list-item; opacity: 1; position: absolute; left: 0px; top: 244px;">
                 <img src="img/meiyun/C6.jpg">
                 <div class="grid-hover">
                     <h1>移动观星台</h1>
@@ -106,7 +96,8 @@
                 </div>
             </li>
 
-            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]" style="display: list-item; opacity: 1; position: absolute; left: 390px; top: 244px;">
+            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]"
+                style="display: list-item; opacity: 1; position: absolute; left: 390px; top: 244px;">
                 <img src="img/meiyun/C8.jpg">
                 <div class="grid-hover">
                     <h1>清涟</h1>
@@ -114,7 +105,8 @@
                 </div>
             </li>
 
-            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]" style="display: list-item; opacity: 1; position: absolute; left: 780px; top: 244px;">
+            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]"
+                style="display: list-item; opacity: 1; position: absolute; left: 780px; top: 244px;">
                 <img src="img/meiyun/C9.jpg">
                 <div class="grid-hover">
                     <h1>数据爬虫后台控制系统</h1>
@@ -122,7 +114,8 @@
                 </div>
             </li>
 
-            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]" style="display: list-item; opacity: 1; position: absolute; left: 0px; top: 488px;">
+            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]"
+                style="display: list-item; opacity: 1; position: absolute; left: 0px; top: 488px;">
                 <img src="img/meiyun/D4.jpg">
                 <div class="grid-hover">
                     <h1>东风</h1>
@@ -130,7 +123,8 @@
                 </div>
             </li>
 
-            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]" style="display: list-item; opacity: 1; position: absolute; left: 390px; top: 488px;">
+            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]"
+                style="display: list-item; opacity: 1; position: absolute; left: 390px; top: 488px;">
                 <img src="img/meiyun/D6.jpg">
                 <div class="grid-hover">
                     <h1>宝时得</h1>
@@ -138,7 +132,8 @@
                 </div>
             </li>
 
-            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]" style="display: list-item; opacity: 1; position: absolute; left: 784px; top: 488px;">
+            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]"
+                style="display: list-item; opacity: 1; position: absolute; left: 784px; top: 488px;">
                 <img src="img/meiyun/D7.jpg">
                 <div class="grid-hover">
                     <h1>时代地产</h1>
@@ -146,7 +141,8 @@
                 </div>
             </li>
 
-            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]" style="display: list-item; opacity: 1; position: absolute; left: 0px; top: 732px;">
+            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]"
+                style="display: list-item; opacity: 1; position: absolute; left: 0px; top: 732px;">
                 <img src="img/meiyun/D8.jpg">
                 <div class="grid-hover">
                     <h1>时代地产</h1>
@@ -154,7 +150,8 @@
                 </div>
             </li>
 
-            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]" style="display: list-item; opacity: 1; position: absolute; left: 390px; top: 732px;">
+            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]"
+                style="display: list-item; opacity: 1; position: absolute; left: 390px; top: 732px;">
                 <img src="img/meiyun/D9.jpg">
                 <div class="grid-hover">
                     <h1>长安</h1>
@@ -162,7 +159,8 @@
                 </div>
             </li>
 
-            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]" style="display: list-item; opacity: 1; position: absolute; left: 784px; top: 732px;">
+            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]"
+                style="display: list-item; opacity: 1; position: absolute; left: 784px; top: 732px;">
                 <img src="img/meiyun/D10.jpg">
                 <div class="grid-hover">
                     <h1>九牧王</h1>
@@ -171,7 +169,8 @@
             </li>
 
 
-            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]" style="display: list-item; opacity: 1; position: absolute; left: 0px; top: 976px;">
+            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]"
+                style="display: list-item; opacity: 1; position: absolute; left: 0px; top: 976px;">
                 <img src="img/meiyun/E3.jpg">
                 <div class="grid-hover">
                     <h1>运营</h1>
@@ -179,7 +178,8 @@
                 </div>
             </li>
 
-            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]" style="display: list-item; opacity: 1; position: absolute; left: 390px; top: 976px;">
+            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]"
+                style="display: list-item; opacity: 1; position: absolute; left: 390px; top: 976px;">
                 <img src="img/meiyun/E4.jpg">
                 <div class="grid-hover">
                     <h1>运营</h1>
@@ -187,7 +187,8 @@
                 </div>
             </li>
 
-            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]" style="display: list-item; opacity: 1; position: absolute; left: 784px; top: 976px;">
+            <li class="grid-itemx" data-jkit="[show:delay=3000;speed=500;animation=fade]"
+                style="display: list-item; opacity: 1; position: absolute; left: 784px; top: 976px;">
                 <img src="img/meiyun/E5.jpg">
                 <div class="grid-hover">
                     <h1>运营</h1>
@@ -199,9 +200,7 @@
         </ul>
 
 
-    </div>
-
-    <!-- <div class="clear"></div> -->
+    </section>
 </body>
 
 </html>
