--- a/xc.html
+++ b/xc.html
@@ -15,18 +15,8 @@
 
 <body>
     <!--Header-->
-    <header id="fullscreen" style="display: block ;">
-        <div class="logo" id="full"><a class="ajax-link" href="index.html">LIBRACELIA</a></div>
-
-        <ul class="header-nav">
-            <li><a class="ajax-link" href="xc.html">入门知识</a></li>
-            <li><a class="ajax-link disable" href="xccompete.html">竞品了解</a></li>
-        </ul>
-
-        <div class="menu-index" id="">
-            <i class="ri-menu-line"></i>
-        </div>
-
+    <header>
+        <i class="ri-arrow-left-line"></i><a href="/designtools.html" class="back">设计工具</a>
     </header>
 
     <!--Content-->
@@ -91,6 +81,59 @@
                     </tr>
 
                 </table>
+                <br /><br />
+
+                </p>
+
+                <h2>信创科普</h2>
+
+                <p style="width: 90%;">
+                    信创市场是技术驱动型，政策对信创仅起到引导作用，技术的先进性、数据安全、技术成熟度、产品性能和自主可控才是信创产业最重要的核心竞争力。<br />
+
+                    <b>信创背景与内涵</b><br />
+                    - IT 产业链上【中上游】环节的技术制约：基础材料 ➡️ 基础工艺 ➡️ 核心元器件 ➡️ 中间产品 ➡️ 装备与监测 ➡️ 基础软件 ➡️ 软件应用 ➡️ IT 服务
+                    <br />
+                    - 关键产品高度依赖海外供应，国外 IT 厂商在操作系统、数据库、芯片、服务器、办公软件、智能终端等领域高度渗透了政府、海关、邮政、金融、铁路、民航、医疗、军警等各行业环节。
+                    <br />
+                    -
+                    信创内涵：从关键核心组件的自主创新入手，以【党政军】和关系国计民生的行业-交通、金融、石油、电力、运营商、航空航天、医疗、教育等为试点，逐步建立自主的IT底层架构和标准，实现全IT全产业链实力和结构的优化升级。
+                    <br /><br />
+
+                    <b>信创产业与市场格局</b><br />
+                    信创产业：<br />
+                    - 应用软件：流式软件(编辑工具)、版式软件(呈现工具)、OA、ERP...
+                    <br />
+                    - 云：阿里云、华为云、浪潮云、天翼云、易捷行云、中国电子云...
+                    <br />
+                    - 基础软件：操作软件-麒麟、统信；数据库-达梦(武汉)、人大金仓、神州通用、南大通用、瀚高软件、沃趣；中间件-东方通、普元、宝兰德、金蝶天燕、中创软件
+                    <br />
+                    -
+                    基础硬件：芯片-鲲鹏、飞腾、兆芯、HYGON、龙芯、申威；存储-长江存储、长鑫存储(武汉)、晋华、紫光、GigaDevice、同有、USI、紫金存储；整机-联想、清华同方、中国长城、浪潮、中科曙光、H3C、华为
+                    <br />
+                    - 信息安全：奇安信、深信服科技、绿盟科技、亚信安全、360、安恒信息、DP tech、中孚信息、启明星辰、天融信...
+                    <br />
+                    <br />
+                    市场格局：<br />
+                    - 中电子(CEC)：PKS-飞腾Phytium+麒麟Kylin+安全Security
+                    <br />
+                    - 中电科(CETC)：包括公共安全与网络信息安全、软件与信息服务、基础电子产品、能源电子，以及雷达 、轨交信号、微波器件等军品
+                    <br />
+                    -华为：开源联盟；鲲鹏生态-鲲鹏CPU+TaiShan服务器+鸿蒙OS+GaussDB；云边端全场景-华为云擎天架构
+                    <br /> <br />
+
+                    <b>云服务-信创云</b><br />
+                    信创云强调的是软硬件国产化条件基础上的云服务，核心特征是国产化淤信息安全防护，绝大多数以私有化形式部署，信创云在逐步替换传统IT架构以及虚拟化的过程中通常是从IaaS层开始。
+                    <br /><br />
+                    信创云服务商为企业提供端到端全栈式服务：云架构搭建｜云应用迁移｜云数据打通｜云原生改造｜云资源管理
+                    <br /><br />
+                    IaaS是主流：云计算IaaS层主要包含计算、存储、网络基础硬件及虚拟化等云基础软件。信创云IaaS平台虽然可以屏蔽异构硬件的问题、弥补算力效能的不足，但仍受限于硬件成熟度。
+                    <br /><br />
+
+                    <b>信创落地与未来展望</b><br />
+                    党政军信创、金融信创、央企信创、行业信创
+                    <br /><br />
+
+
 
                 <p>外部连接</p>
                 <br />
@@ -100,21 +143,24 @@
                     <br />
                     <a
                         href="https://www.qianzhan.com/analyst/detail/220/211203-28c90e09.html#comment">重磅！2022年中国及31省市信创产业政策汇总及解读（全）政策进入整体布局阶段</a>
+                    <br />
+                    <a href="file/中国信创产业研究报告.pdf" download="中国信创产业研究报告.pdf">艾瑞咨询｜中国信创产业研究报告.PDF</a>
+                    <br />
+                    <a href="file/2022年中国信创行业发展研究报告.pdf" download="2022年中国信创行业发展研究报告.pdf">2022年中国信创行业发展研究报告.PDF</a>
                 </div>
 
                 <br /><br />
-
                 </p>
             </div>
+
 
             <div class="one-column">
 
                 <h4>目录</h4>
 
                 <ul class="left-nav">
-                    <li><a class="ajax-link select" href="xc.html">名称解释</a></li>
-                    <li><a class="ajax-link disable" href="xccloud.html">信创科普</a></li>
-                    <li><a class="ajax-link disable" href="xcproduct.html">信创云产品梳理</a></li>
+                    <li><a class="ajax-link select" href="xc.html">入门知识</a></li>
+                    <li><a class="ajax-link disable" href="xccompete.html">竞品了解</a></li>
                 </ul>
 
 
