--- a/xccompete.html
+++ b/xccompete.html
@@ -15,18 +15,8 @@
 
 <body>
     <!--Header-->
-    <header id="fullscreen" style="display: block ;">
-        <div class="logo" id="full"><a class="ajax-link" href="index.html">LIBRACELIA</a></div>
-
-        <ul class="header-nav">
-            <li><a class="ajax-link disable" href="xc.html">入门知识</a></li>
-            <li><a class="ajax-link " href="xccompete.html">竞品了解</a></li>
-        </ul>
-
-        <div class="menu-index" id="">
-            <i class="ri-menu-line"></i>
-        </div>
-
+    <header>
+        <i class="ri-arrow-left-line"></i><a href="/designtools.html" class="back">设计工具</a>
     </header>
 
     <!--Content-->
@@ -130,6 +120,243 @@
                 <br /><br />
 
                 </p>
+
+                <h2>华云</h2>
+
+                <p>
+                    链接：https://www.huayun.com/xcyjz
+                    <br /><br />
+                <table class="table">
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">时间</td>
+                        <td>2020年
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">slogon</td>
+                        <td>
+                            全芯、全栈、全生态-信创云基座解决方案
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">用户群体/行业</td>
+                        <td>
+                            政务<br />
+                            安徽信创、江苏信创
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">用户场景</td>
+                        <td>
+                            VMware业务环境替换场景<br />
+                            信创云容灾备份场景<br />
+                            信创关键业务优化场景
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">技术/自研能力</td>
+                        <td>
+                            5分<br />
+                            信创云基座基于华云数据自研的国产混合IT架构云化解决方案
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">产品</td>
+                        <td>
+                            CloudUltra 企业级云计算平台<br />
+                            CloudUltra 企业级云存储平台<br />
+                            CloudUltra 混合云管理平台<br />
+                            CloudUltra 超融合一体机
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">适配体系</td>
+                        <td>
+                            信创云基座已完成适配基于 6 大国产处理器的 20 余款信创品牌服务器、6 个品牌 50 多个系列的交换机以及 11 个品牌的 15
+                            个型号信创终端，同时对国产化操作系统、数据库、中间件完成广泛的兼容适配
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">用户视角</td>
+                        <td>
+                            视觉：4.5分<br />
+                            文档：3分<br />
+                            售后：4分<br />
+                            安全：4.5分
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">SWOT</td>
+                        <td>
+                            优势：自研优势，一站式交付<br />
+                            劣势：<br />
+                            商机：寻找区域差异<br />
+                            威胁：政务领域十分成熟
+                        </td>
+                    </tr>
+
+                </table>
+
+
+
+                <br /><br />
+
+                </p>
+
+                <h2>中国电子云</h2>
+
+                <p>
+                    链接：https://www.cecloud.com/xinchuang/index.html
+                    <br /><br />
+                <table class="table">
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">时间</td>
+                        <td>2021年
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">slogon</td>
+                        <td>
+                            以“pks+”为底座，构建中国电子云信创合作新模式，新体系
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">用户群体/行业</td>
+                        <td>
+                            服务信创生态
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">用户场景</td>
+                        <td>
+                            适配上云专家服务<br />
+                            适配测试认证服务
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">技术/自研能力</td>
+                        <td>
+                            3分<br />
+                            主要是资源整合
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">产品</td>
+                        <td>
+                            --
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">适配体系</td>
+                        <td>
+                            PKS：飞腾PSPA、麒麟可信操作系统、澜起安全内存、安全BIOS、BMC、网络芯片、可信软件基
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">用户视角</td>
+                        <td>
+                            视觉：3分<br />
+                            文档：3分<br />
+                            售后：3分<br />
+                            安全：3分
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">SWOT</td>
+                        <td>
+                            优势：<br />
+                            劣势：依赖资源合作方<br />
+                            商机：<br />
+                            威胁：不是直接竞品
+                        </td>
+                    </tr>
+
+                </table>
+
+
+
+                <br /><br />
+
+                </p>
+
+                <h2>神州信创云</h2>
+
+                <p>
+                    链接：http://www.dcits.com/show-562-251-1.html
+                    <br /><br />
+                <table class="table">
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">时间</td>
+                        <td>2019年
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">slogon</td>
+                        <td>
+                            提供金融信创全栈式服务，打造全面生态体系
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">用户群体/行业</td>
+                        <td>
+                            金融<br />
+                            2021年在中国银行业 IT 解决方案市场中排名前三
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">用户场景</td>
+                        <td>
+                            农业农村场景金融<br />
+                            中小微企业场景金融<br />
+                            开放银行、移动金融<br />
+                            数字人民币<br />
+                            供应链金融
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">技术/自研能力</td>
+                        <td>
+                            4分<br />
+                            云原生数组化安全底座
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">产品</td>
+                        <td>
+                            神州信创云
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">适配体系</td>
+                        <td>
+                            基础设施：鲲泰服务器、鲲泰存储、神州网络、量子密钥分发网络、鲲泰大数据一体机
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">用户视角</td>
+                        <td>
+                            视觉：3分<br />
+                            文档：3分<br />
+                            售后：3分<br />
+                            安全：4分
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="background-color:rgb(240, 240, 240);">SWOT</td>
+                        <td>
+                            优势：神州平台优势<br />
+                            劣势：<br />
+                            商机：寻找行业差异<br />
+                            威胁：金融领域十分成熟
+                        </td>
+                    </tr>
+
+                </table>
+
+
+
+                <br /><br />
+
+                </p>
+
             </div>
 
             <div class="one-column">
@@ -137,11 +364,10 @@
                 <h4>目录</h4>
 
                 <ul class="left-nav">
-                    <li><a class="ajax-link select" href="xccompete.html">EasyStack</a></li>
-                    <li><a class="ajax-link disable" href="huayun.html">华云</a></li>
-                    <li><a class="ajax-link disable" href="zgdzy.html">中国电子云</a></li>
-                    <li><a class="ajax-link disable" href="szxcy.html">神州信创云</a></li>
+                    <li><a class="ajax-link disable" href="xc.html">入门知识</a></li>
+                    <li><a class="ajax-link select" href="xccompete.html">竞品了解</a></li>
                 </ul>
+
 
 
             </div>
